# data-eng-genai-demo

./: AGENTS.md  Makefile  pyproject.toml
config/: config.yaml
src/: main.py
src/core/: __init__.py  config.py  exceptions.py
src/data_io/: __init__.py  data_io_manager.py
src/jobs/: __init__.py  run_top_10.py
src/transforms/: __init__.py  vendas_transforms.py
src/utils/: __init__.py  logging_setup.py  pandas_manager.py  spark_manager.py
tests/: test_vendas_transforms.py
