[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "top-10-clientes-pipeline"
version = "1.0.0"
description = "Pipeline de dados para identificar os Top 10 Clientes por volume de compras"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "build>=0.10",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
